# aws-setup

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dash  README.md  pyproject.toml
dashboard/: ice_cot.py  wsgi.py
opentofu/: .terraform.lock.hcl  cloudwatch.tf  dynamodb.tf  ecr.tf  ecs.tf  iam_ec2.tf  iam_ecs.tf  iam_lambda.tf  lambda.tf  provider.tf  s3bucket.tf  sg.tf  sns_sqs.tf  terraform.tfvars  variables.tf  vpc.tf
pipelines/: process_ice_cot.py  pull_ice_cot.py
utility/: files.py  s3.py  sns.py
