[project]
name = "aws-setup"
version = "0.1.0"
description = "Project to set up AWS for DE"
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "boto3>=1.36.16",
    "botocore>=1.36.16",
    "dash>=2.18.2",
    "gunicorn>=23.0.0",
    "pandas>=2.2.3",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ruff>=0.9.5",
]
